--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,9 +3,10 @@ root {
 }
 
 #karte{
-    position:absolute;
-    top:0;
+    position: absolute;
+    top:15%;
     right:0;
     bottom:0;
     left:0;
 }
+
